--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#" class="sponsor_question">후원관련 자주 묻는 질문 보기</a>
             </div>
         </section>
-        <!-- 2.행 퀴즈 -->
+        <!-- 2행 퀴즈 -->
         <section class="quiz">
             <div class="container">
                 <form action="#" method="get" id="left_quiz">
@@ -53,6 +53,14 @@
                     <p><img src="./images/quiz_contents.png" alt="퀴즈 참여 현황"></p>
                     <p>*퀴즈 참여 현황은 매주 업데이트 됩니다</p>
                 </div>
+            </div>
+        </section>
+        <!-- 3행 동영상 -->
+        <section class="ad">
+            <div class="container">
+                <h2>죽은 어미 곁을 떠나지 못하는<br>새끼 북극곰의 이야기</h2>
+                <iframe src="https://www.youtube.com/embed/J6j7j2pxRII?autoplay=1&mute=1&loop=1&playlist=J6j7j2pxRII" title="북극곰 타라 캠페인" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <a href="#" class="sponser_btn">북금곰 후원하기</a>
             </div>
         </section>
     </div><!-- e:#wrap -->
